# nf-genie

./: .gitignore  .pre-commit-config.yaml  README.md  call_bash_from_python.py  environment.yml  main.nf  nextflow.config  nextflow_schema.json  nextflow_schema_patch_release.json  patch_release_main.nf  patch_release_nf_schema.json  your_script.sh
.github/: CODEOWNERS  build-docker-images.yml
.github/workflows/: build-docker-images.yml
lib/: Utils.groovy  WorkflowMain.groovy
modules/: check_for_retractions.nf  compare_releases.nf  create_consortium_release.nf  create_dashboard_html.nf  create_data_guide.nf  create_public_release.nf  find_maf_artifacts.nf  generate_tmb.nf  load_to_bpc.nf  patch_release.nf  process_maf.nf  process_main.nf  reset_processing.nf  sync_staging_table_with_prod.nf  sync_staging_table_with_production.nf  validate_data.nf
scripts/: sync_staging_table_with_prod.py  sync_staging_table_with_production.py
scripts/data_guide/: Dockerfile  README.md  data_guide.qmd  data_guide.qmd.j2  generate_data_guide.py  generate_data_guide_cli.R  requirements.txt
scripts/patch_release/: Dockerfile  README.md  compare_patch.py  patch.py
scripts/release_utils/: Dockerfile  check_bpc_retraction.py  consortium_to_bpc.py
scripts/synapse_compare/: README.md  pyproject.toml  synapse_compare_demo.ipynb
scripts/synapse_compare/src/synapse_compare/: compare_between_two_synapse_entities.py
scripts/synapse_compare/tests/: test_compare_between_two_synapse_entities.py
scripts/sync_tables/: Dockerfile  (+1 more)
validation/: Dockerfile  README.md  requirements.txt
(+39 files in other folders)
