[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-compare"
version = "0.1.0"
description = "Compare two Synapse tables/files and generate reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datacompy==0.14.0",
  "pandas>=2.0.0,<3.0.0",
  "synapseclient>=4.5.1,<4.10.0",
  "ydata-profiling==4.15.0",
]

# Optional: installs a command `syncompare` that runs your argparse main()
[project.scripts]
syncompare = "synapse_compare.compare_between_two_synapse_entities:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
